# gdModTemplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  imgui-hook.lib  minhook.x32.lib
geode/: CMakeCCUpdateBin.bat  CMakeLists.txt  about.md  changelog.md  mod.json  support.md
geode/release/: user95401.mod.geode
src/: VersionInfo.rc  _main.cpp  main.cpp
src/Layers/: CocosHeadersOnlyHookExample.cpp  CocosHeadersOnlyHookExample.hpp  CreatorLayerExt.cpp  CreatorLayerExt.hpp  LoadingLayerExt.cpp  LoadingLayerExt.hpp  MappedHooksExample.cpp  MappedHooksExample.hpp  MenuLayerExt.cpp  MenuLayerExt.hpp  OptionsLayerExt.cpp  OptionsLayerExt.hpp  _CustomLayer.cpp  _CustomLayer.hpp
